forges: CommitAnalyzer review